--- a/index.html
+++ b/index.html
@@ -2,6 +2,7 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Livros</title>
     <link rel="stylesheet" href="css/estilos.css">
 </head>
@@ -9,13 +10,30 @@
     <header>
         <nav class="menu">
           <ul>
-            <li><a href="#">Sobre</a></li>
-            <li><a href="#">Portfólio</a></li>
-            <li><a href="#">Contato</a></li>
+            <li><a href="#">Obras lidas</a></li>
+            <li><a href="#">Obras preferidas</a></li>
+            <li><a href="#">Obras desejadas</a></li>
           </ul>
         </nav>
-        <h1 class="title">Livros</h1>
-        <h2 class="subtitle">by Angélica Drielly</h2>
+        <div>
+          <h1 class="title">MEUS LIVROS</h1>
+          <h2 class="subtitle">by Angélica Drielly</h2>
+        </div>
     </header>
+    <section>
+      <h2>Obras lidas</h2>
+      <figure>
+        <img class="img-lidas" src='./img/capitaes.jpeg' alt="Livro Capitães da areia">
+        <figcaption>Capitães da Areia, de Jorge Amado</figcaption>
+      </figure>
+      <figure>
+        <img class="img-lidas" src='./img/astrofisica.jpeg' alt="Livro Astrofísica para apressados">
+        <figcaption>Astrofísica para apressados, de Neil Tyson</figcaption>
+      </figure>
+      <figure>
+        <img class="img-lidas" src='./img/malala.jpeg' alt="Livro Eu sou Malala">
+        <figcaption>Eu sou Malala</figcaption>
+      </figure>
+    </section>
 </body>
 </html>
