--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Livros</title>
     <link rel="stylesheet" href="CSS/estilos.css">
+    <link href="https://fonts.googleapis.com/css2?family=Baloo+2&family=Quicksand:wght@600&family=Sacramento&display=swap" rel="stylesheet"> rel="stylesheet"> 
 </head>
 <body>
     <header>
@@ -20,20 +21,31 @@
           <h2 class="subtitle">by Angélica Drielly</h2>
         </div>
     </header>
-    <section>
+    <section class="lidas">
       <h2>Obras lidas</h2>
-      <figure>
-        <img class="img-lidas" src='./img/capitaes.jpeg' alt="Livro Capitães da areia">
-        <figcaption>Capitães da Areia, de Jorge Amado</figcaption>
-      </figure>
-      <figure>
-        <img class="img-lidas" src='./img/astrofisica.jpeg' alt="Livro Astrofísica para apressados">
-        <figcaption>Astrofísica para apressados, de Neil Tyson</figcaption>
-      </figure>
-      <figure>
-        <img class="img-lidas" src='./img/malala.jpeg' alt="Livro Eu sou Malala">
-        <figcaption>Eu sou Malala</figcaption>
-      </figure>
+      <div class="grid">
+        <figure>
+          <img class="img-lidas" src='./img/capitaes.jpeg' alt="Livro Capitães da areia">
+          <figcaption>Capitães da Areia, de Jorge Amado</figcaption>
+        </figure>
+        <figure>
+          <img class="img-lidas" src='./img/astrofisica.jpeg' alt="Livro Astrofísica para apressados">
+          <figcaption>Astrofísica para apressados, de Neil Tyson</figcaption>
+        </figure>
+        <figure>
+          <img class="img-lidas" src='./img/malala.jpeg' alt="Livro Eu sou Malala">
+          <figcaption>Eu sou Malala, de Malala Yousafzai</figcaption>
+        </figure>
+        <figure>
+          <img class="img-lidas" src='./img/alem.png' alt="Livro Além do bem e do mal">
+          <figcaption>Além do bem e do mal, de Friedrich Nietzsche</figcaption>
+        </figure>
+        <figure>
+          <img class="img-lidas" src='./img/apocalipse.png' alt="Livro A batalha do apocalipse">
+          <figcaption>A batalha do apocalipse, de Eduardo Spohr</figcaption>
+        </figure>
+      </div>
+      
     </section>
 </body>
 </html>
