--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Livros</title>
     <link rel="stylesheet" href="CSS/estilos.css">
-    <link href="https://fonts.googleapis.com/css2?family=Baloo+2&family=Quicksand:wght@600&family=Sacramento&display=swap" rel="stylesheet"> rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css2?family=Baloo+2&family=Quicksand:wght@600&family=Sacramento&display=swap" rel="stylesheet">
     <script src="https://kit.fontawesome.com/e967fcfbf4.js" crossorigin="anonymous"></script> 
 </head>
 <body>
