Adição da seção "sobre"

--- a/index.html
+++ b/index.html
@@ -9,12 +9,13 @@
     <script src="https://kit.fontawesome.com/e967fcfbf4.js" crossorigin="anonymous"></script> 
 </head>
 <body>
+  
     <header>
         <nav class="menu">
           <ul>
             <li><a href="#lidas">Obras lidas</a></li>
             <li><a href="#preferidas">Obras preferidas</a></li>
-            <li><a href="#contato">Contato</a></li>
+            <li><a href="#sobre">Sobre</a></li>
           </ul>
         </nav>
         <div>
@@ -22,6 +23,7 @@
           <h2 class="subtitle">por Angélica Drielly</h2>
         </div>
     </header>
+
     <section id="lidas" class="obras">
       <h2>Obras lidas</h2>
       <div class="grid">
@@ -47,6 +49,7 @@
         </figure>
       </div> 
     </section>
+
     <section id="preferidas" class="obras">
       <h2>Obras preferidas</h2>
       <div class="grid">
@@ -72,8 +75,17 @@
         </figure>
       </div> 
     </section>
-    <section id="contato" class="contato">
-      <h2>Contato</h2>
+
+    <section id="sobre" class="sobre">
+      <h2>Sobre</h2>
+
+      <figure>
+        <img src="./img/docinho.png" alt="Personagem Docinho">
+      </figure>
+      <p>
+        Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.
+      </p>
+
       <div class="icons">
         <a target="_blank" href="https://github.com/angelicadri">
           <i class="fab fa-github"></i>
